interface/static/css/style.css
html {
    height: 100%;
}

body {
    height: 100%;
    padding: 0;
    margin: 0;
}

#left_menu {
    height: 100%;
    background-color: #28648F;
    width: 100px;
    float: left;
}

.left_item {
    margin: 0 0 2px;
    width: -webkit-calc(100% - 2px);
    width:    -moz-calc(100% - 2px);
    width:         calc(100% - 2px);
    text-align: center;
    background-color: #383737;
    min-height: 5em;
    clear: both;
    float: left;
    position: relative;
}

.left_item_inner {
    position: absolute;
    bottom: 0;
    width: 100%;
}

.current_page {
    float: right;
    width: -webkit-calc(100% - 10px);
    width:    -moz-calc(100% - 10px);
    width:         calc(100% - 10px);
}

li {
    padding-bottom: 0.5em;
}

.tplink {
    font-size: 24px;
}

#content-td {
    vertical-align: top;
    padding-left: 20px !important;
}
#content {
    padding-left: 2em;
}

#content-main {
    height: 100%;
    border-spacing: 0;
}

#content-main td {
    margin: 0; padding: 0;
}

a {
    color: white;
}

#left_menu a {
    text-decoration: none;
}

body {
    background-color: #383737;
    padding: 0; margin: 0;
    color: #FFF;
    font-family: sans-serif;
}

h1 {
    width: 600px;
    border-bottom: 3px solid #28648F;
}

h4 {
    font-size: 0.9em;
    margin: 0.8em 0 0;
}

select, button, input[type=submit] {
    background-color: #28648F;
    border: 1px solid #1476BD;
    color: #FFF;
    height: 1.6em;
    font-size: 1.1em;
}

#disassembly {
    height: 9em;
    width: 430px;
    overflow-y: scroll;
}

#regView {
    vertical-align: top;
    min-width: 185px;
}

.regh_r, .regh_w {
    width: 5px;
    padding: 0;
    text-align: center !important;
}

.regh_val {
    text-align: center !important;
}

.reg_r_cb, .reg_w_cb {
    width: 12px;
    margin: 3px 0;
    padding: 0;
}

.regVal {
    width: 100px;
    font-family: monospace;
}

/* Current operation highlighrs */
.highlightread {
    border: 2px solid red !important;
}

.highlightwrite {
    border: 2px solid green !important;
}

.highlightread.highlightwrite {
    border: 2px solid yellow !important;
}
/* */

.smaller_font {
    font-size: 0.8em;
}

.statusVal {
    width: 35px;
    height: 1em;
}

.flag_btn, .pointer {
    cursor: pointer;
    padding: 0;
    margin: 0;
}

#content-sim {
    height: 100%;
    margin: 0 auto;
}

#editorPanel {
    padding: 0 0 0 1em;
    height: 100%;
    margin: 0;
    vertical-align: top;
}

#editor {
    width: 630px;
    height: calc(100% - 70px);
    border: 1px solid rgba(136,164,155, 0.7)
}

#dashboard {
    padding-left: 1em;
    vertical-align: top;
}

#stdin_ {
    width:300px;
    height:50px;
}

#stdout_ {
    width: 300px;
    height: 100px;
}

img {
    /* height: 30px;
    width: auto;*/
}

.ts-error {
	border-radius: 5px;
	border: 2px solid #F00;
	background: #C44;
	color: #fff;
}

.ts-error .tooltipster-content {
	font-family: Arial, sans-serif;
	font-size: 14px;
	line-height: 16px;
	padding: 8px 10px;
}

.ace_gutter-layer {
    color: #FFF;
    background-color: #585858;
}

.ace_content {
    background-color: #383737;
}

.ace_gutter-active-line {
    background-color: rgba(255, 255, 255, 0.25) !important;
    z-index: 1;
}

.ace_active-line {
    background: rgba(255, 255, 255, 0.07) !important;
}

.ace_gutter-cell.ace_breakpoint {
    border-radius: 20px 0px 0px 20px;
    box-shadow: 0px 0px 1px 1px red inset;
}

.ace_gutter-cell {
    /* padding-left: 0 !important; */
    /* this makes the Breakpoints work. */
}

.ace-tm {
    color: #FFF !important;
}
.ace_keyword {
    color: #2472FB !important;
}
.ace_asmcomment {
    color: #95989A;
    font-style: italic;
}
.ace_sectiontitle {
    font-weight: bold;
    color: #FB2472;
}
.ace_memdeclare {
    color: #63D8E8;
    font-weight: bold;
}
.ace_label {
    color: #A477FF;
    font-weight: ;
}

.debug_line.ace_start {
    position: absolute;
    background: rgba(100,200,100,0.5);
    z-index: 20;
    width: 100% !important;
}

.next_debug_line.ace_start {
    position: absolute;
    background: rgba(200,100,100,0.5);
    z-index: 20;
    width: 100% !important;
}

#memoryview {
    height: 390px;
}
#memoryview th {
    width: 16px;
}

#memoryview td {
    text-align: center;
    font-size: 0.9em;
    font-family: monospace;
}

.testgrid {
    width: 445px;
}
.testgrid td {
    border: 1px solid transparent;
}
.mem_r {
    background-color: #4D878F;
}
.mem_w {
    background-color: #9A2D54;
}
.mem_rw {
    background-color: #6E569B;
}
.mem_e.help {
    border: 2px solid red !important;
}
.mem_e {
    border: 1px solid red !important;
}
.mem_instr.help {
    border: 2px solid green !important;
}
.mem_instr {
    border: 1px solid green !important;
}

#paginator {
    text-align: center;
}

#jump_memory_go {
    margin: 0 10px 0 0;
}

#jump_memory {
    margin: 0 0 0 10px;
}

#debugger_buttons {
    padding: 0 5px 5px;
}

.assemble_edit {
    background-color: #b75b5b !important;
}

#assemble {
    width: 100px;
}

.top_buttons {
    height: 35px;
    vertical-align: top;
}

.border_container {
    border: 1px solid #95989A;
}

.border_container_reg {
    border: 1px solid #95989A;
    border-bottom: none;
}

#after-reg {
    text-align: center;
    padding: 5px 0;
    border: 1px solid #95989A;
    border-top: none;
}

#config_wrapper {
    text-align: center;
    padding: 10px;
    height: auto;
}

#configurations {
    padding: 10px 20px;
    height: auto;
}

.registers {
    border-spacing: 0;
    width: 100%;
}

.registers tr:nth-child(odd) td {
    background-color: #585858;
}
.registers th, .registers td {
    text-align: right;
    font-family: "Lucida Console", Monaco, monospace;
    font-size: 0.8em;
}

.ui-widget-header {
    border: none !important;
    background: none !important;
}

/* Tabs */
.etabs-main { margin: 0 0 10px 0; padding: 0; }
.tab-main { display: inline-block; zoom:1; *display:inline; background: #28648F; border: solid 1px #1476BD; border-bottom: none; width: 200px; text-align: center; margin: 0 -5px 0 0; }
.tab-main a { line-height: 0.7em; display: block; padding: 8px 0 0; outline: none; text-decoration: none; font-size: 1.5em; }
.tab-main a:hover { text-decoration: underline; }
.tab-main.active { background: #383737; position: relative; top: 3px; border-top: solid 4px #1476BD; border-bottom: none; height: 21px; }
.tab-main a.active { font-weight: bold; }

.etabs-reg { margin: 0; padding: 0; }
.tab-reg { display: inline-block; zoom:1; *display:inline; background: #383737; border: solid 1px #95989A; border-bottom: none; text-align: center; margin: 0 -5px 0 0; }
.tab-reg a { line-height: 0.7em; display: block; padding: 8px 10px 0; outline: none; text-decoration: none; font-size: 12px; }
.tab-reg a:hover { text-decoration: underline; }
.tab-reg.active { background: #383737; position: relative; top: 3px; border-top: solid 4px #95989A; border-bottom: none; height: 14px; }
.tab-reg a.active { font-weight: bold; }

/* Message */
#message_bar{
  cursor: pointer;
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  height: 50px;
  line-height: 50px;
  width: 100%;
  background: rgba(200, 100, 100, 0.8);
  z-index: 1000;
  vertical-align: middle;
  text-align: center;
}

.flat_button {
  text-decoration: none;
  padding: 2px 6px 2px 6px;
  background-color: #28648F;
  border: 1px solid #1476BD;
  color: #FFF;
  font-size: 1.1em;
}

